# PDF-Panda

./: .eslintrc.json  .gitignore  .prettierrc  .rustfmt.toml  AGENTS.md  CONTRIBUTING.md  CREDITS.md  FEATURES.md  LICENSE  PLAN.md  README.md  SECURITY.md  _review_diff.txt  _review_output.txt  _review_prompt.txt  about.hbs  about.toml  audit-ci.jsonc  eslint.config.js  index.html  package-lock.json  package.json  rustfmt.toml  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  release.yml
LICENSES/: BSD-3-Clause.txt
docs/: MANUAL_E2E.md  SIGNING.md  credits-npm.json  credits-npm.md  credits-third-party.md  text-editing-v2.md
e2e/: package-lock.json  package.json  tsconfig.json  wdio.conf.ts
e2e/capabilities/: e2e.json
e2e/fixtures/: sample.md
scripts/: build-appimage.sh  build-linux-packages.sh  build-macos.sh  build-no-bundle.sh  build-windows.sh  e2e-build.sh  e2e-test.sh  fetch-appimage-tools.sh  fetch-pdfium.sh  gen-parity-batch.py  gen-parity-batch2.py  gen-parity-batch3.py  gen-parity-batch4.py  gen-parity-batch5.py  gen-parity-batch6.py  gen-parity-batch7.py  gen-parity-batch8.py  gen-parity-docmod.py  generate-credits.sh  generate-latest-json.py  generate-npm-credits.mjs  import-apple-cert.sh  parity_patch.py  release-checksums.sh  sign-macos.sh  sign-windows.sh  smoke-test.sh
src/: App.tsx  main.tsx  parity_batch_commands.json  styles.css  vite-env.d.ts  wdio-tauri-plugin.d.ts
src-tauri/: Cargo.toml  pdf-panda.desktop  tauri.conf.json  tauri.e2e.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands_export.inc.rs  licenses.rs  main.rs  main_tests.rs  markdown_converter.rs  parity_batch2_generated.inc.rs  parity_batch3_generated.inc.rs  parity_batch4_generated.inc.rs  parity_batch5_generated.inc.rs  parity_batch6_generated.inc.rs  parity_batch7_generated.inc.rs  parity_batch8_generated.inc.rs  parity_batch_generated.inc.rs  parity_docmod_generated.inc.rs
src-tauri/src/commands/: invoke_handler.inc.rs  invoke_handler_a.inc.rs  invoke_handler_b.inc.rs  types.inc.rs  wrappers_annot.inc.rs  wrappers_doc.inc.rs  wrappers_page.inc.rs  wrappers_render.inc.rs
src-tauri/src/pdf/: annotation_markup.rs  annotations.rs  bookmarks.rs  browser.rs  content.rs  coords.rs  crop.rs  export.rs  fonts.rs  form_merge.rs  forms.rs  history.rs  import.rs  io.rs  markdown.rs  markdown_heuristic.rs  markdown_images.rs  markdown_pipeline.rs  markdown_tagged.rs  merge_split.rs  metadata.rs  mod.rs  ocr.rs  ocr_layer.rs  optimize.rs  page_decor.rs  page_images.rs  page_margins.rs  page_ops.rs  page_range.rs  page_sizes.rs  page_text.rs  page_tree.rs  parity_helpers.rs  pdfium_bind.rs  print.rs  redact.rs  render.rs  rotation.rs  search.rs  (+6 more)
src/app/: types.ts  (+82 more)
(+223 files in other folders)
