[package]
name = "pdf-editor"
version = "0.1.1"
description = "A high-performance PDF editor"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
pdfium-render = "0.9.1"
lopdf = "0.41.0"
image = "0.25"

# Optimized release profile for fast, compact production builds. `panic` is left
# as the default (unwind) so Tauri can still catch and surface command panics.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
