[package]
name = "pdf-panda"
version = "0.6.0"
description = "A high-performance PDF editor"
edition = "2021"
license = "GPL-3.0-only"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
wdio = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]

[dependencies]
tauri = { version = "2", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pdfium-render = "0.9.1"
lopdf = "0.41.0"
image = "0.25"
fax = "0.2"
tauri-plugin-wdio = { version = "1", optional = true }
tauri-plugin-wdio-webdriver = { version = "1", optional = true }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
underskrift = "0.1.4"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
ureq = "2"
ttf-parser = "0.25"

# underskrift → josekit needs OpenSSL; Windows has no system copy, so build it
# from source there (Linux/macOS keep using the platform OpenSSL).
[target.'cfg(windows)'.dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }

# Optimized release profile for fast, compact production builds. `panic` is left
# as the default (unwind) so Tauri can still catch and surface command panics.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
